@@ -5,7 +5,7 @@ _Comment=Check word definitions and spellings in an online dictionary
 Exec=gnome-dictionary
 Terminal=false
 Type=Application
-Icon=gnome-dictionary.png
+Icon=accessories-dictionary.png
 StartupNotify=true
 Categories=GNOME;GTK;Utility;
 X-GNOME-DocPath=gnome-dictionary/gnome-dictionary.xml
