@@ -1,3 +1,12 @@
+2007-08-28  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* src/gdict-about.c:
+	* src/gdict-app.c:
+	* src/gdict-applet.c:
+	* data/gnome-dictionary.desktop.in.in:
+	* data/Makefile.am: Use the gnome-icon-theme icon for the dictionary
+	instead of our own. (#470287, Michael Monreal)
+
 2007-08-27  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* libgdict/gdict-client-context.c: Use g_shell_quote() to escape
